--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello world</h1>
     <h3>What's up</h3>
+    <input type="text" name="your name" placeholder="name">
     
 </body>
 </html>
